# ml-akn-client

./: .gitignore  Makefile  README.md  pyproject.toml
src/: README.md  variables_example.env
src/marklogic/: README.md  admin-checks.sh  deploy.sh  helloworld.sh  helloworld.xqy  load_documents.sh  ml-workspace.xml  search.xqy  summaries-lib.xqy  summaries.xqy
src/ml_akn_client/: ml_akn_client.py
src/ml_akn_client/models/: summaries.py
src/ml_akn_client/server/: marklogic.py
src/tna_fcl_client/: caselawclient.py  client.py
src/tna_fcl_client/models/: search.py  summaries.py
src/tna_fcl_client/server/: marklogic.py
tests/: test_model_search.py  test_model_summaries.py  test_server.py  test_summaries.py
