[project]
name = "tna-fcl-client"
version = "0.1.0"
description = ""
authors = [
    {name = "rorycl",email = "rorycl@campbell-lange.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "tna_fcl_client", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
