[project]
name = "tna-fcl-client"
version = "0.1.0"
description = ""
authors = [
    {name = "rorycl",email = "rorycl@campbell-lange.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-xml (>=2.17.2,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "tna_fcl_client", from = "src"}]

[tool.mypy]
plugins = [
  "pydantic_xml.mypy"
]

[tool.poetry.group.dev.dependencies]
ipython = "^9.4.0"
ipdb = "^0.13.13"
mypy = "^1.16.1"
ruff = "^0.12.3"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
