[project]
name = "tna-fcl-client"
version = "0.1.0"
description = ""
authors = [
    {name = "rorycl",email = "rorycl@campbell-lange.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-xml (>=2.17.2,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "tna_fcl_client", from = "src"}]

[tool.mypy]
plugins = [
  "pydantic_xml.mypy"
]

[[tool.mypy.overrides]]
# there are no type hints available for requests_toolbelt
module = ["requests_toolbelt.multipart"]
follow_untyped_imports = true

[tool.poetry.group.dev.dependencies]
ipython = "^9.4.0"
ipdb = "^0.13.13"
mypy = "^1.16.1"
ruff = "^0.12.3"
pre-commit = "^4.2.0"
pdoc = "^15.0.4"
pytest-cov = "^6.2.1"
types-requests = "^2.32.4.20250611"
requests-mock = "^1.12.1"
pytest-httpserver = "^1.1.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
